build: Install a copy of the default theme as 'LibAdwaita' as part of the libadwaita-1-examples package.
This is probably temporary...

--- a/src/stylesheet/meson.build
+++ b/src/stylesheet/meson.build
@@ -79,6 +79,8 @@ if sassc.found()
         sassc, sassc_opts, '@INPUT@', '@OUTPUT@',
       ],
       depend_files: scss_deps,
+      install: true,
+      install_dir: theme_dir
     )
   endforeach
 endif
@@ -94,4 +96,9 @@ libadwaita_stylesheet_resources = gnome.compile_resources(
   ],
   dependencies: stylesheet_deps,
   c_name: 'adw_stylesheet',
+)
+
+install_subdir(
+  'assets',
+  install_dir: theme_dir
 )
