--- a/meson.build
+++ b/meson.build
@@ -8,6 +8,7 @@ project('libadwaita', 'c',
 version_arr = meson.project_version().split('-')[0].split('.')
 adwaita_version_major = version_arr[0].to_int()
 adwaita_version_minor = version_arr[1].to_int()
+adwaita_version_short = '@0@.@1@'.format(adwaita_version_major, adwaita_version_minor)
 
 if version_arr[2].startswith('alpha') or version_arr[2].startswith('beta') or version_arr[2].startswith('rc')
   adwaita_version_micro = 0
@@ -125,12 +126,15 @@ if package_subdir != ''
   datadir    = get_option('datadir') / package_subdir
   libdir     = get_option('libdir')  / package_subdir
   girdir     = get_option('datadir') / package_subdir / 'gir-1.0'
+  theme_dir  = get_option('datadir') / package_subdir / 'themes' / 'LibAdwaita-Example' / 'libadwaita-@0@'.format(adwaita_version_short)
   typelibdir = get_option('libdir')  / package_subdir / 'girepository-1.0'
   vapidir    = get_option('datadir') / package_subdir / 'vapi'
+
 else
   datadir    = get_option('datadir')
   libdir     = get_option('libdir')
   girdir     = get_option('datadir') / 'gir-1.0'
+  theme_dir  = get_option('datadir') / 'themes' / 'LibAdwaita-Example' / 'libadwaita-@0@'.format(adwaita_version_short)
   typelibdir = get_option('libdir')  / 'girepository-1.0'
   vapidir    = get_option('datadir') / 'vala' / 'vapi'
 endif
