--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,15 @@ subprojects/libsass
 subprojects/gi-docgen
 subprojects/gtk
 
+debian/tmp
+debian/gir1.2-adw-1
+debian/libadwaita-1-0
+debian/libadwaita-1-dev
+debian/libadwaita-1-doc
+debian/libadwaita-1-examples
+debian/.debhelper
+debian/*.debhelper.log
+debian/*.substvars
+debian/debhelper-build-stamp
+debian/files
+po/libadwaita.pot
